# ChollianWallPaper

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  chollian.cpp  chollian.h  gui.h  image.cpp  image.h  main.cpp
.github/workflows/: macOS.yml  macOS10.15.yml  macOS11.yml  ossar-analysis.yml  windows.yml
scripts/: build_openssl_curl.sh  bundle_macos.py  nsis_windows.nsh
src/: README.md  about.cpp  about.h  chollian.cpp  chollian.h  dependency_license.h  downloader.cpp  downloader.h  gui.cpp  gui.h  image.cpp  image.h  logger.h  main.cpp  setting.cpp  setting.h  utctime.cpp  utctime.h
